fix table layout, add to row buttons edit and delete

--- a/src/shared/ui/button/button.style.scss
+++ b/src/shared/ui/button/button.style.scss
@@ -25,4 +25,12 @@
     padding: 3.33px;
     background: transparent;
   }
+
+  &--link {
+    width: max-content;
+    padding: 0;
+    background: transparent;
+    text-decoration-line: underline;
+    color: #057AE3;
+  }
 }
