--- a/src/features/tablePersons/ui/tablePersons/tablePerson.styles.scss
+++ b/src/features/tablePersons/ui/tablePersons/tablePerson.styles.scss
@@ -18,6 +18,8 @@
     width: 100%;
     border-spacing: 0;
     border-collapse: collapse;
+    word-wrap:break-word;
+    table-layout: fixed
   }
 
   .table__head {
@@ -52,6 +54,13 @@
       border-bottom: 1px solid #E5E5E5;
       border-right: 1px solid #E5E5E5;
       height: 32px;
+      word-wrap: break-word;
+      max-width: 100%;
+
+      &:last-child {
+        padding: 9px 42px;
+        width: max-content;
+      }
     }
 
     .empty-row:last-child td {
