--- a/src/widgets/tablePersons/ui/rowButtons/rowButtons.style.scss
+++ b/src/widgets/tablePersons/ui/rowButtons/rowButtons.style.scss
@@ -7,4 +7,20 @@
     margin-left: 53px;
     color: #B0263D;
   }
+
+  @media(max-width: 1045px) {
+    &__delete {
+      margin-left: 20px;
+    }
+  }
+
+
+  @media(max-width: 600px) {
+    flex-direction: column;
+
+    &__delete {
+      margin-left: 0;
+      margin-top: 16px;
+    }
+  }
 }
